Fix overflow

--- a/app/assets/stylesheets/common/base/modal.scss
+++ b/app/assets/stylesheets/common/base/modal.scss
@@ -66,6 +66,7 @@
   }
 
   &__body {
+    overflow-y: auto;
     padding: 1rem 1.5rem;
     box-sizing: border-box;
 
