--- a/app/assets/stylesheets/common/components/add-pm-participants.scss
+++ b/app/assets/stylesheets/common/components/add-pm-participants.scss
@@ -1,3 +1,9 @@
+.d-modal.add-pm-participants {
+  .d-modal__body {
+    overflow-y: visible;
+  }
+}
+
 .add-pm-participants.modal .share.modal-panel {
   .header {
     display: flex;
